fix pokemons not showing as favorites in favorites page. change outline buttons text color in dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,10 @@ body.dark {
 	#search-input::placeholder {
 		color: lightgray;
 	}
+
+	.btn-outline-danger {
+		color: white;
+	}
 }
 
 body.light {
